fix: connection leakage